syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ed";
option java_outer_classname = "Protobuf";
option objc_class_prefix = "HLW";

package br.com.zup.ed;

import "google/protobuf/timestamp.proto";

service ProtobufService {
  rpc cadastra (FuncionarioRequest) returns (FuncionarioResponse) {}
}

enum Cargo{
  DEV = 0;
  QA = 1;
  GERENTE = 2;
}

message FuncionarioRequest {
  string name = 1;
  string cpf = 2;
  int32 idade = 3;
  double salario = 4;
  bool ativo = 5;
  Cargo cargo = 6;

  message Endereco{
    string locradouro = 1;
    string cep = 2;
    string complemento = 3;
  }

  repeated Endereco endereco = 7;
}

message FuncionarioResponse {
  string nome = 1;
  google.protobuf.Timestamp criadoEm = 2;
}